# pythoncookie

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.repo_name}}/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
{{cookiecutter.repo_name}}/tests/: conftest.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/: __init__.py  __main__.py
