[tool.poetry]
name = "{{cookiecutter.app_name}}"
version = "0.0.1"
description = ""
authors = ["Marcello Salvati <byt3bl33d3r@pm.me>"]
readme = "README.md"
homepage = "https://github.com/byt3bl33d3r/{{cookiecutter.repo_name}}"
repository = "https://github.com/byt3bl33d3r/{{cookiecutter.repo_name}}"
exclude = ["tests"]
include = ["LICENSE"]
license = ""
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

packages = [
    { include = "{{cookiecutter.app_name}}"}
]

[tool.poetry.scripts]
{{cookiecutter.app_name}} = '{{cookiecutter.app_name}}.__main__:main'

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
flake8 = "*"
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
